Testing Exception Util

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -15,5 +15,5 @@ dependencies:
       join-classpath: true
     Vault:
       load: BEFORE
-      required: true
+      required: false
       join-classpath: true
